<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StremioMobile</string>
    <string name="exo_player_title">Video Player</string>
    <string name="exo_player_back">Back</string>
    <string name="exo_player_settings">Settings</string>
    <string name="exo_player_rewind">Rewind</string>
    <string name="exo_player_play">Play</string>
    <string name="exo_player_pause">Pause</string>
    <string name="exo_player_fast_forward">Fast Forward</string>
    <string name="exo_player_fullscreen">Fullscreen</string>
    <string name="exo_player_subtitles">Subtitles</string>
    <string name="exo_player_speed">Playback Speed</string>
    <string name="exo_player_error">Error</string>
    <string name="exo_player_loading">Loading…</string>
    <string name="exo_player_audio_track">Audio Track</string>
    <string name="exo_player_aspect_ratio">Aspect Ratio</string>
</resources>
